; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_slave_machine_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_slave_machine_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"slave_machine_init() CPU%d\0A\00", align 1
@FULL_SLAVE_INIT = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @slave_machine_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @get_cpu_number()
  %4 = call i32 @DBG(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = load i8*, i8** %2, align 8
  %6 = load i8*, i8** @FULL_SLAVE_INIT, align 8
  %7 = icmp eq i8* %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 (...) @clock_init()
  br label %10

10:                                               ; preds = %8, %1
  %11 = call i32 (...) @cpu_machine_init()
  ret void
}

declare dso_local i32 @DBG(i8*, i32) #1

declare dso_local i32 @get_cpu_number(...) #1

declare dso_local i32 @clock_init(...) #1

declare dso_local i32 @cpu_machine_init(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
